[package]
name = "solana-data-structures"
version = "0.1.0"
description = "Solana Data Structures"
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
solana-program = "1.7.11"
thiserror = "1.0"
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]
